# dutyr

./: .gitignore  README.md  default.nix  devenv.nix  flake.nix  release-plz.toml
.github/: FUNDING.yml  dependabot.yml
.github/disabled-workflows/: dist-release.yml.disabled  release-plz.yml.disabled
.github/workflows/: ci-tests-nix.yml  ci-tests.yml  pull-request-tests.yml
build-aux/nix/flutter/app/: default.nix
build-aux/nix/rust/dutyr-cli/: default.nix
build-aux/nix/rust/dutyr-daemon/: default.nix
build-aux/nix/rust/dutyr-server/: default.nix
src/flutter/: pubspec.lock.json  pubspec.yaml
src/flutter/android/app/: build.gradle
src/flutter/android/app/src/main/: AndroidManifest.xml
src/flutter/android/app/src/main/kotlin/com/example/dutyr_app/: MainActivity.kt
src/flutter/integration_test/: simple_test.dart
src/flutter/ios/Runner/: Info.plist
src/flutter/ios/Runner.xcodeproj/: project.pbxproj
src/flutter/lib/: main.dart
src/flutter/lib/src/rust/: frb_generated.dart
src/flutter/linux/: CMakeLists.txt  my_application.cc
src/flutter/linux/flutter/: generated_plugins.cmake
src/flutter/macos/Runner.xcodeproj/: project.pbxproj
src/flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
src/flutter/macos/Runner/Configs/: AppInfo.xcconfig
src/flutter/rust/: Cargo.toml
src/flutter/rust_builder/: pubspec.yaml
src/flutter/rust_builder/android/: build.gradle  settings.gradle
src/flutter/rust_builder/android/src/main/: AndroidManifest.xml
src/flutter/rust_builder/cargokit/: run_build_tool.sh
src/flutter/rust_builder/ios/: rust_lib_dutyr_app.podspec
src/flutter/rust_builder/linux/: CMakeLists.txt
src/flutter/rust_builder/macos/: rust_lib_dutyr_app.podspec
src/flutter/rust_builder/windows/: CMakeLists.txt
src/flutter/web/: index.html  manifest.json
src/flutter/windows/: CMakeLists.txt
src/flutter/windows/flutter/: generated_plugins.cmake
src/flutter/windows/runner/: Runner.rc  main.cpp
src/rust/: Cargo.toml
src/rust/crates/lib/dutyr-cli-migrators/: Cargo.toml
src/rust/crates/lib/dutyr-daemon-activities/: Cargo.toml
src/rust/crates/lib/dutyr-daemon-rpc/: Cargo.toml
src/rust/crates/lib/dutyr-local-storage/: Cargo.toml
src/rust/crates/lib/dutyr-server-auth/: Cargo.toml
src/rust/crates/lib/dutyr-server-storage-common/: Cargo.toml
src/rust/crates/lib/dutyr-server-storage-postgres/: Cargo.toml
src/rust/crates/lib/dutyr-shared/: Cargo.toml
src/rust/crates/lib/dutyr-storage-common/: Cargo.toml
src/rust/crates/lib/dutyr-web-client/: Cargo.toml
src/rust/crates/lib/dutyr-web-server/: Cargo.toml
