[package]
name = "dutyr-daemon-rpc"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tarpc = { version = "0.36.0", features = ["serde", "serde-transport", "serde-transport-json", "tcp", "tokio1"] }
