[package]
name = "dutyr-local-storage"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
default = []

[dependencies]
diesel = { version = "2.2.9", features = ["sqlite", "uuid"] }
directories.workspace = true
eyre.workspace = true
fs-err.workspace = true
log.workspace = true
pretty_assertions.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
