[package]
name = "dutyr-web-client"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
cynic = { version = "3.9.1", features = ["http-reqwest"] }
reqwest = { version = "0.12.11", features = ["json", "rustls-tls-native-roots"] }
