[package]
name = "dutyr-web-server"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
default = []
graphql = []
rest = []

[dependencies]
eyre.workspace = true
log.workspace = true
thiserror.workspace = true
